--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: 'Inter', sans-serif;
+}
+
+body {
+    background-color: #F1EAE1;
+}
