--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 } */
 
 body {
-    background-color: #FFE6CB;
+    background-color: #e9d7c2;
 }
 
 @layer components {
@@ -49,7 +49,9 @@ body {
 
     .who-am-i h1 {}
 
-    .who-am-i p {}
+    .who-am-i p {
+        width: 20rem;
+    }
 
     .emphasized-text {
         color: theme(colors.emphasis-orange);
@@ -57,6 +59,8 @@ body {
 
     .background-title {
         color: theme(colors.ghost-grey);
+        /* font-family: Arial; */
+        color: rgba(0, 0, 0, 0.05);
     }
 
     .my-button {
@@ -80,4 +84,5 @@ body {
         /* Color of the line */
         margin: ;
     }
+
 }
